--- a/ConsoleApplication2/ConsoleApplication2/App.config
+++ b/ConsoleApplication2/ConsoleApplication2/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="firstdbConnectionString"
+            connectionString="Data Source=DEV19;Initial Catalog=firstdb;User ID=sa;Password=!QAZ2wsx"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
