--- a/ConsoleApplication2/ConsoleApplication2/App.config
+++ b/ConsoleApplication2/ConsoleApplication2/App.config
@@ -1,13 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="firstdbConnectionString"
-            connectionString="Data Source=DEV19;Initial Catalog=firstdb;User ID=sa;Password=!QAZ2wsx"
-            providerName="System.Data.SqlClient" />
+        <add name="firstdbConnectionString" connectionString="Data Source=DEV19;Initial Catalog=firstdb;User ID=sa;Password=!QAZ2wsx" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
